Test Project to be shared

--- a/brb.test.cxfrs/src/main/webapp/test.html
+++ b/brb.test.cxfrs/src/main/webapp/test.html
@@ -5,8 +5,15 @@
 <title>Test CXF RS</title>
 </head>
 <body>
-<h1>Welcome!!!! to BRB Project</h1>
+<h1>Welcome!!!! to CXF and Jersey RS Test Project</h1>
 <hr>
 <h3>CXF RS Project</h3>
+<h2>Enter Below URLs are testing:</h2>
+<h4>1. http://localhost:8080/brb.test.cxfrs/home/test</h4>
+<p>It is test service which prints "hello"</p>
+<br>
+<h4>2. http://localhost:8080/brb.test.cxfrs/home/{anyname}  (without flower braces)</h4>
+<p>This service creates new thread asynchronously and print hello {anyname}!
+
 </body>
 </html>
